2006-07-30  Kevin Kenny  <kennykb@acm.org>

	* generic/tclClock.c (GetJulianDayFromEraYearMonthDay):
	Corrected several errors in converting dates before the
	Common Era.  [Bug 1426279]
	* library/clock.tcl: Corrected syntax errors in generated code for
	%EC, %Ey, and %W format groups [Bug 1505383]. Corrected a bug
	in cache management for format strings containing [glob]
	metacharacters [Bug 1494664]. Corrected several errors in
	formatting/scanning of years prior to the Common Era, and
	added the missing %EE format group to indicate the era.
	* tools/makeTestCases.tcl: Added code to make sure that %U and %V
	format groups are included in the tests. (The code depends on
	%U and %V formatting working correctly when 'makeTestCases.tcl'
	is run, rather than making a completely independent check.) Added
	tests for [glob] metacharacters in strings.  Added tests for
	years prior to the Common Era.
	* tests/clock.test: Rebuilt with new test cases for all the above.
	
2006-07-30  Joe English  <jenglish@users.sourceforge.net>

	* doc/AppInit.3: Fix typo [Bug 1496886]

2006-07-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Corrected flawed overflow detection in
	* tests/expr.test:	INST_EXPON that caused [expr 2**64]
	to return 0 instead of the same value as [expr 1<<64].

2006-07-24  Don Porter  <dgp@users.sourceforge.net>

	* win/tclWinSock.c:	Correct un-initialized Tcl_DString.  Thanks
	to afredd. [Bug 1518166]

2006-07-21  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:
	* tests/execute.test (execute-9.1): dgp's fix for [Bug 1522803].

2006-07-20   Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c (Tcl_InitNotifier, Tcl_WaitForEvent): create
	notifier thread lazily upon first call to Tcl_WaitForEvent() rather than
	in Tcl_InitNotifier(). Allows calling exeve() in processes where the
	event loop has not yet been run (Darwin's execve() fails in processes